[package]
name = "advent_of_code"
version = "0.9.3"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
doctest = false

[features]
test_lib = []

[dependencies]
array2d = "0.3.1"
geo = "0.27.0"
geo-types = "0.7.12"
itertools = "0.12.0"
lazy_static = "1.4.0"
memoize = "0.4.1"
pico-args = "0.5.0"
regex = "1.10.2"
